--- a/style.css
+++ b/style.css
@@ -90,14 +90,13 @@ p.header-text {
 .btn {
   text-decoration: none;
   border-radius: 20px;
-  background-color: rgb(29, 142, 241);
+  background-color: #2f4858;
   padding: 10px;
   font-size: 20px;
 }
 .btn:active,
 .btn:hover {
-  color: rgb(10, 1, 63);
-  background-color: rgb(25, 43, 24);
+  background-color: #c0c4bf;
 }
 .btn:visited,
 .btn:link {
@@ -120,8 +119,9 @@ header img {
   display: flex;
   flex-direction: row;
   padding: 10px;
-  width: 1000px;
+  width: 980px;
   font-size: large;
+  height: 310px;
 }
 .text img {
   padding: 20px;
