--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
 .header {
   background-color: #e5e5e4;
   padding: 10px;
-  box-shadow: 0 0 5px hsl(0, 0%, 0%);
+  /* box-shadow: 0 0 5px hsl(0, 0%, 0%); */
+  box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.2);
 }
 h1 {
   font-size: 44px;
